@@ -2,6 +2,8 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form>
+    <label name="template"/>
+    <field name="template" colspan="3"/>
     <label name="product"/>
     <field name="product" colspan="3"/>
     <label name="party"/>
