@@ -2,6 +2,8 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree sequence="sequence">
+    <field name="template"/>
+    <field name="product"/>
     <field name="party"/>
     <field name="name"/>
     <field name="code"/>
